--- a/views/sample_views.xml
+++ b/views/sample_views.xml
@@ -170,31 +170,34 @@
                             class="oe_stat_button"
                             icon="fa-pencil-square-o" attrs="{'invisible':['|', ('invoice_count', '=', 0), ('state', 'in', ('draft','sent','to approve'))]}">
                             <field name="invoice_count" widget="statinfo" string="Vendor Bills"/>
-                            <field name='invoice_ids' invisible="1"/>
+                            <field name='invoice_ids' invisible="0"/>
                         </button>
                     </div>
                     <div class="oe_title">
-                        <span class="o_form_label" attrs="{'invisible': [('state','not in',('draft','sent'))]}">Request for Quotation </span>
-                        <span class="o_form_label" attrs="{'invisible': [('state','in',('draft','sent'))]}">sample Order </span>
+                        <span class="o_form_label" attrs="{'invisible': [('state','not in',('draft','sent'))]}">Solicitud de Muestra: </span>
+                        <span class="o_form_label" attrs="{'invisible': [('state','in',('draft','sent'))]}">Sample Order </span>
                         <h1>
                             <field name="priority" widget="priority" class="mr-3"/>
                             <field name="name" readonly="1"/>
+                            <label for ="company_id" string=" - "/>
+                            <field name="company_id" readonly="1"/>
                         </h1>
                     </div>
-                    <group>
+                    <group colspan="6">
                         <group>
-                            <field name="company_id"/>
+                            <field name="tickete"/>
                             <field name="partner_id" widget="res_partner_many2one" context="{'res_partner_search_mode': 'supplier', 'show_vat': True}"
                                 placeholder="Name, TIN, Email, or Reference"
                             />
                             <field name="currency_id" groups="base.group_multi_currency" force_save="1"/>
+                            <field name="diazafra"/>
                             <field name="id" invisible="1"/>
                             <field name="frente"/>
-                            <field name="projects_id"/>
                             <field name="tipocorte"/>
                             <field name="variedad"/>
                         </group>
                         <group>
+                            <field name="projects_id"/>
                             <field name="date_order" attrs="{'invisible': [('state','=','sample')]}"/>
                             <label for="date_approve" attrs="{'invisible': [('state','!=','sample')]}"/>
                             <div name="date_approve" attrs="{'invisible': [('state','!=','sample')]}" class="o_row">
@@ -202,28 +205,11 @@
                                 <field name="mail_reception_confirmed" invisible="1"/>
                                 <span class="text-muted" attrs="{'invisible': [('mail_reception_confirmed','=', False)]}">(confirmed by vendor)</span>
                             </div>
-                            <label for="date_planned"/>
-                            <div name="date_planned_div" class="o_row">
-                                <field name="date_planned" attrs="{'readonly': [('state', 'not in', ('draft', 'sent', 'to approve', 'sample'))]}"/>
-                                <field name="mail_reminder_confirmed" invisible="1"/>
-                                <span class="text-muted" attrs="{'invisible': [('mail_reminder_confirmed', '=', False)]}">(confirmed by vendor)</span>
-                            </div>
-                            <label for="receipt_reminder_email" invisible='1'/>
-
-                            <div name="reminder" class="o_row" title="Automatically send a confirmation email to the vendor X days before the expected receipt date, asking him to confirm the exact date.">
-                                <field name="receipt_reminder_email"/>
-                                <span>Ask confirmation</span>
-                                <div class="o_row oe_inline" attrs="{'invisible': [('receipt_reminder_email', '=', False)]}">
-                                    <field name="reminder_date_before_receipt" class="oe_inline"/>
-                                    day(s) before 
-                                    <widget name='toaster_button' button_name="send_reminder_preview" title="Preview the reminder email by sending it to yourself." attrs="{'invisible': [('id', '=', False)]}"/>
-                                </div>
-                            </div>
 
                             <field name="origin" attrs="{'invisible': [('origin','=',False)]}"/>
 
-                            <field name="hdc" attrs="{'invisible': [('state','=','sample')]}"/>
-                            <label for="hdc" attrs="{'invisible': [('state','!=','sample')]}"/>
+                            <field name="fdc" attrs="{'invisible': [('state','=','sample')]}"/>
+                            <label for="fdc" attrs="{'invisible': [('state','!=','sample')]}"/>
 
                             <field name="hdc" attrs="{'invisible': [('state','=','sample')]}"/>
                             <label for="hdc" attrs="{'invisible': [('state','!=','sample')]}"/>
@@ -234,6 +220,60 @@
                         </group>
                     </group>
                     <notebook>
+                        <page string="Products" name="products">
+                            <field name="order_line"
+                                widget="section_and_note_one2many"
+                                mode="tree"
+                                context="{'default_state': 'draft'}"
+                                attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}">
+                                <!--Lista-->
+                                <tree string="sample Order Lines" editable="bottom">
+                                    <control>
+                                        <create name="add_product_control" string="Add a product"/>
+                                        <create name="add_section_control" string="Add a section" context="{'default_display_type': 'line_section'}"/>
+                                        <create name="add_note_control" string="Add a note" context="{'default_display_type': 'line_note'}"/>
+                                    </control>
+                                    <field name="display_type" invisible="1"/>
+                                    <field name="currency_id" invisible="1"/>
+                                    <field name="state" invisible="1" readonly="1"/>
+                                    <field name="product_type" invisible="1"/>
+                                    <field name="product_uom_category_id" invisible="1"/>
+                                    <field name="invoice_lines" invisible="1"/>
+                                    <field name="sequence" widget="handle"/>
+                                    <field name="product_id"/>
+                                    <field name="name" widget="section_and_note_text"/>
+                                    <field name="product_qty"/>
+                                    <field name="qty_received_manual" invisible="1"/>
+                                    <field name="qty_received_method" invisible="1"/>
+                                    <field name="qty_received" string="Received" attrs="{'column_invisible': [('parent.state', 'not in', ('sample', 'done'))], 'readonly': [('qty_received_method', '!=', 'manual')]}" optional="show"/>
+                                    <field name="product_uom" string="UoM"/>
+                                </tree>
+                            </field>
+                            <group class="oe_subtotal_footer oe_right">
+                                <field name="amount_untaxed" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <field name="amount_tax" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <div class="oe_subtotal_footer_separator oe_inline">
+                                    <label for="amount_total"/>
+                                </div>
+                                <field name="amount_total" nolabel="1" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                            </group>
+                            <field name="notes" class="oe_inline" placeholder="Define your terms and conditions ..."/>
+                            <div class="oe_clear"/>
+                        </page>
+                        <page string="Other Information" name="sample_delivery_invoice">
+                            <group>
+                                <group name="other_info">
+                                    <field name="user_id" domain="[('share', '=', False)]" widget="many2one_avatar_user"/>
+                                    <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}"/>
+                                </group>
+                                <group name="invoice_info">
+                                    <field name="invoice_status" attrs="{'invisible': [('state', 'in', ('draft', 'sent', 'to approve', 'cancel'))]}"/>
+                                    <field name="payment_term_id" attrs="{'readonly': ['|', ('invoice_status','=', 'invoiced'), ('state', '=', 'done')]}" options="{'no_create': True}"/>
+                                    <field name="fiscal_position_id" options="{'no_create': True}" attrs="{'readonly': ['|', ('invoice_status','=', 'invoiced'), ('state', '=', 'done')]}"/>
+                                </group>
+                            </group>
+                        </page>
+
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
